refactor(category): Separate Category logic into service layer